--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
     "name": "groovylambda",
     "displayName": "Groovy Lambda",
     "description": "Color theme optimised for Haskell, based on Gruvbox Material.",
+    "publisher": "sheaf",
     "version": "0.1.0",
-	"homepage": "https://github.com/sheaf/groovy-lambda",
+    "homepage": "https://github.com/sheaf/groovy-lambda",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sheaf/groovy-lambda.git"
+      },
     "engines": {
         "vscode": "^1.40.0"
     },
